--- a/window.ui
+++ b/window.ui
@@ -2,9 +2,9 @@
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAdjustment" id="size">
-    <property name="upper">100</property>
+    <property name="upper">1.7976931348623157e+308</property>
+    <property name="value">5</property>
     <property name="step_increment">0.5</property>
-    <property name="page_increment">10</property>
   </object>
   <object class="GtkWindow" id="window">
     <property name="can_focus">False</property>
