--- a/window.ui
+++ b/window.ui
@@ -132,7 +132,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <child>
-                  <object class="GtkRadioButton" id="radiobutton1">
+                  <object class="GtkRadioButton" id="mode-mindist">
                     <property name="label" translatable="yes">min-ρ</property>
                     <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
@@ -142,7 +142,6 @@
                     <property name="xalign">0</property>
                     <property name="active">True</property>
                     <property name="draw_indicator">True</property>
-                    <property name="group">radiobutton2</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -151,17 +150,16 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkRadioButton" id="radiobutton2">
+                  <object class="GtkRadioButton" id="mode-kmeans">
                     <property name="label" translatable="yes">min-ρ с перецентровкой</property>
                     <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
                     <property name="use_action_appearance">False</property>
-                    <property name="relief">none</property>
                     <property name="xalign">0</property>
-                    <property name="active">True</property>
                     <property name="draw_indicator">True</property>
+                    <property name="group">mode-mindist</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
