--- a/window.ui
+++ b/window.ui
@@ -151,8 +151,8 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkRadioButton" id="mode-kmeans">
-                    <property name="label" translatable="yes">min-ρ с перецентровкой</property>
+                  <object class="GtkRadioButton" id="mode-minmax">
+                    <property name="label" translatable="yes">max-min</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
@@ -165,6 +165,23 @@
                     <property name="expand">False</property>
                     <property name="fill">True</property>
                     <property name="position">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkRadioButton" id="mode-kmeans">
+                    <property name="label" translatable="yes">внутригрупповое среднее</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="use_action_appearance">False</property>
+                    <property name="xalign">0</property>
+                    <property name="draw_indicator">True</property>
+                    <property name="group">mode-mindist</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
               </object>
