--- a/window.ui
+++ b/window.ui
@@ -33,6 +33,7 @@
                 <child>
                   <object class="GtkButton" id="load">
                     <property name="label">gtk-open</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -49,6 +50,7 @@
                 <child>
                   <object class="GtkButton" id="save">
                     <property name="label">gtk-save</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -92,6 +94,7 @@
             <child>
               <object class="GtkButton" id="clear">
                 <property name="label">gtk-clear</property>
+                <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
@@ -136,6 +139,7 @@
                 <child>
                   <object class="GtkRadioButton" id="mode-mindist">
                     <property name="label" translatable="yes">min-ρ</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
@@ -151,25 +155,9 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkRadioButton" id="mode-minmax">
-                    <property name="label" translatable="yes">max-min</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="use_action_appearance">False</property>
-                    <property name="xalign">0</property>
-                    <property name="draw_indicator">True</property>
-                    <property name="group">mode-mindist</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">1</property>
-                  </packing>
-                </child>
-                <child>
                   <object class="GtkRadioButton" id="mode-kmeans">
                     <property name="label" translatable="yes">внутригрупповое среднее</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
@@ -236,6 +224,23 @@
               </packing>
             </child>
             <child>
+              <object class="GtkCheckButton" id="bounds">
+                <property name="label" translatable="yes">Строить границы</property>
+                <property name="use_action_appearance">False</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="use_action_appearance">False</property>
+                <property name="xalign">0</property>
+                <property name="draw_indicator">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">7</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkHBox" id="box3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
@@ -243,6 +248,7 @@
                 <child>
                   <object class="GtkButton" id="export">
                     <property name="label" translatable="yes">Экспорт</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -259,6 +265,7 @@
                 <child>
                   <object class="GtkButton" id="go">
                     <property name="label">gtk-execute</property>
+                    <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
@@ -277,7 +284,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">True</property>
-                <property name="position">7</property>
+                <property name="position">8</property>
               </packing>
             </child>
           </object>
