--- a/window.ui
+++ b/window.ui
@@ -13,7 +13,7 @@
   </object>
   <object class="GtkWindow" id="window">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Кластеризация</property>
+    <property name="title" translatable="yes">Clusterization</property>
     <property name="icon_name">applications-science</property>
     <child>
       <object class="GtkHBox" id="pack">
@@ -124,7 +124,8 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="xalign">0.10000000149011612</property>
-                <property name="label" translatable="yes">Метод кластеризации:</property>
+                <property name="label"
+                          translatable="yes">Clusterization method:</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -156,7 +157,7 @@
                 </child>
                 <child>
                   <object class="GtkRadioButton" id="mode-kmeans">
-                    <property name="label" translatable="yes">внутригрупповое среднее</property>
+                    <property name="label" translatable="yes">k-means clustering</property>
                     <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
@@ -188,7 +189,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="xalign">0.89999997615814209</property>
-                    <property name="label" translatable="yes">Радиус кластера:</property>
+                    <property name="label" translatable="yes">Threshold:</property>
                     <property name="justify">right</property>
                     <property name="wrap">True</property>
                   </object>
@@ -202,8 +203,7 @@
                   <object class="GtkSpinButton" id="spinbutton1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="has_tooltip">True</property>
-                    <property name="tooltip_text" translatable="yes">Максимальное расстояние от центра кластера, при котором очередная точка будет считаться принадлежащей ему</property>
+                    <property name="has_tooltip">False</property>
                     <property name="invisible_char">●</property>
                     <property name="invisible_char_set">True</property>
                     <property name="adjustment">size</property>
@@ -225,7 +225,7 @@
             </child>
             <child>
               <object class="GtkCheckButton" id="bounds">
-                <property name="label" translatable="yes">Строить границы</property>
+                <property name="label" translatable="yes">Classify using perceptron</property>
                 <property name="use_action_appearance">False</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -247,7 +247,7 @@
                 <property name="homogeneous">True</property>
                 <child>
                   <object class="GtkButton" id="export">
-                    <property name="label" translatable="yes">Экспорт</property>
+                    <property name="label" translatable="yes">Export</property>
                     <property name="use_action_appearance">False</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
